--- a/source/style/main.css
+++ b/source/style/main.css
@@ -5,7 +5,7 @@
 }
 
 .wrap {
-    max-width: 1280px;
+    max-width: 1380px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -13,53 +13,53 @@
 .menu {
     position: absolute;
     width: 80px;
-    background: linear-gradient(to bottom, #f8a84c, #a72968 );
+    background: linear-gradient(to bottom, #de6262,#dd5e89);
 }
 
 .header {
-    height: 5em;
-    width: 1280px;
+    width: 1380px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 70px;
     flex-grow: 1;
-    background-color: burlywood;
 }
 
 .statistics {
+    width: 1384px;
     height: 110px;
-    width: 1280px;
     flex-grow: 2;
     background-color: chocolate;
 }
 
 .main {
     height: 796px;
-    width: 700px;
     flex-grow: 3;
     background-color: darkblue;
 }
 
 .sidebar {
     height: 796px;
-    width: 275px;
     flex-grow: 4;
     background-color: crimson;
 }
 
 .menu__list {
-    margin: 2em 0px;
+    margin: 3em 0px;
     font-family: 'lato';
-    font-size: 0.9em;
+    font-size: 0.7em;
     list-style-type: none;
     text-align: center;
     color: rgb(255, 255, 255);
 }
 
 .menu__logo {
+    margin-top: 15px;
     font-family: 'courgette';
-    font-size: 2.0em;
+    font-size: 1.9em;
     list-style-type: none;
     text-align: center;
     text-decoration: none;
-    background-color: rgb(255, 255, 255);
+    background: linear-gradient(to bottom, #de6262,#dd5e89);
 }
 
 .menu__power-button {
@@ -67,6 +67,56 @@
     list-style-type: none;
     text-align: center;
 }
+
+.header__img {
+    margin-top: 19px;
+    margin-left: 22px;
+    width: 25px;
+    height: 20px;
+}
+
+.header__list {
+    height: 30px;
+    width: 70px;
+    margin: 10px 5px;
+    color: lawngreen;
+}
+
+.header__input {
+    margin-top: 15px;
+    width: 450px;
+    text-align: center;
+}
+
+#ip1 {
+    border-radius: 18px;
+    margin-top: 13px;
+    background: grey;
+    width: 200px;
+    height: 28px;    
+}
+
+.header__list__name {
+    padding-top: 20px;
+    width: 200px;
+    text-align: center;
+}
+
+.header__ellipse {
+    margin-top: 20px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
