--- a/source/style/main.css
+++ b/source/style/main.css
@@ -5,14 +5,16 @@
 }
 
 .wrap {
+    position: relative;
     max-width: 1298px;
     display: flex;
 }
 
 .menu {
+    position: fixed;
     margin: 0px auto;
     height: 1000px;
-    width: 78px;
+    width: 71px;
     background: linear-gradient(to bottom, #de6262,#dd5e89);
 }
 
@@ -26,7 +28,7 @@
 }
 
 .menu__logo {
-    width: 70px;
+    width: 71px;
     height: 71px;
     font-family: 'courgette';
     font-size: 1.8em;
@@ -47,7 +49,8 @@
 }
 
 .base__layout {
-    width: 1298px;
+    margin-left: 70px;
+    width: 100%;
     height: 1000px;
     display: flex;
     flex-direction: column;
