--- a/source/style/main.css
+++ b/source/style/main.css
@@ -292,15 +292,46 @@
 }
 
 .sidebar__social-icons {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     width: 298px;
     height: 200px;
     background-color: rgb(51, 173, 39);
 }
 
-.sidebar__icons {
-    background-color: darkorange;
+.sidebar__upper-icons {
+    display: flex;
+    justify-content: center;
 }
 
+.sidebar__lower-icons {
+    display: flex;
+    justify-content: center;
+}
+
+.sidebar__upper-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 20px;
+    background-color: darkred;
+}
+
+.sidebar__lower-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 20px;
+    background-color: rgb(0, 9, 139);
+}
 
 
 
