--- a/source/style/main.css
+++ b/source/style/main.css
@@ -29,7 +29,7 @@
 
 .menu__logo {
     width: 71px;
-    height: 71px;
+    height: 57px;
     font-family: 'courgette';
     font-size: 1.8em;
     list-style-type: none;
@@ -54,6 +54,7 @@
     height: 1000px;
     display: flex;
     flex-direction: column;
+    background-color: grey;
 }
 
 .header {
@@ -62,7 +63,7 @@
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
-    background-color: rgb(226, 235, 238);
+    background-color: rgb(255, 255, 255);
 }
 
 .header__first-button {
@@ -72,8 +73,8 @@
 }
 
 .header__img {
-    width: 25px;
-    height: 20px;
+    width: 35px;
+    height: 25px;
 }
 
 .header__img-kendall {
@@ -97,8 +98,8 @@
     width: 299px;
     height: 34px;  
     border-radius: 18px;
-    border: 1px solid grey;
-    background: rgb(243, 238, 238);
+    border: rgb(165, 156, 156);
+    background: rgb(240, 236, 236);
 }
 
 .header__picture {
@@ -123,13 +124,14 @@
 }
 
 .statistics {
+    margin-top: 1px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 1298px;
     height: 98px;
     flex-grow: 2;
-    background-color: rgb(43, 40, 37);
+    background-color: white;
 }
 
 .statistics__figures {
@@ -142,7 +144,6 @@
     width: 140px;
     height: 98px;
     text-transform: capitalize;
-    background-color: yellow;
 }
 
 .statistics__body {
@@ -184,7 +185,51 @@
     background-color: rgb(255, 255, 255);
 }
 
+.upper__container-left__header {
+    display: flex;
+}
+
+.upper__container-left__header-title {
+    margin: 10px 0px 0px 15px;
+}
+
+.upper__container-left__header-buttons {
+    display: flex;
+    margin-left: 255px;
+}
+
+.upper__container-buttons {
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.upper__container-left__block {
+    margin: 10px 5px;
+    display: flex;
+    justify-content: center;
+    width: 60px;
+    height: 22px;
+    border-radius: 10px;
+}
+
+.upper__container-left__block:hover {
+    background: linear-gradient(to bottom, #de6262,#dd5e89);
+}
+
+
+.upper__container-left__menu {
+    margin-top: 12px;
+    background-color: rgb(255, 255, 255);
+}
+
 .upper__container-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
     margin: 10px;
     width: 264px;
     height: 246px;
@@ -226,16 +271,30 @@
     height: 285px;
 }
 
-.bottom-left__container {
+.horizontal__lower-container__left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
     width: 241px;
     height: 285px;
     background-color: rgb(255, 255, 255);
 }
 
-.bottom-right__container {
+.horizontal__lower-container__right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
     width: 241px;
     height: 285px;
     background-color: rgb(255, 255, 255);
+}
+
+.lower-container__text {
+    display: flex;
 }
 
 .sidebar {
@@ -253,7 +312,7 @@
 }
 
 .sidebar__body {
-    background-color: rgb(233, 225, 225);
+    background-color: rgb(245, 240, 240);
 }
 
 .row__chat {
@@ -288,6 +347,7 @@
     text-align: left;
     display: flex;
     flex-direction: column;
+    text-transform: capitalize;
 }
 
 .sidebar__img {
@@ -302,14 +362,18 @@
     align-items: center;
     width: 298px;
     height: 58px;
-    border-bottom: 1px solid black;
-    background-color: white;
-
+    border-bottom: 1px solid rgb(165, 156, 156);
+    background-color: rgb(245, 240, 240);
 }
 
 #sidebar-form {
     width: 210px;
     margin-right: 10px;
+    border-top-style: hidden; 
+    border-left-style: hidden;
+    border-right-style: hidden;
+    background-color: rgb(245, 240, 240);
+    
 }
 
 .sidebar__form-icon {
@@ -323,7 +387,7 @@
     align-items: center;
     width: 298px;
     height: 200px;
-    background-color: white;
+    background-color: rgb(245, 240, 240);
 }
 
 .sidebar__upper-icons {
@@ -344,7 +408,6 @@
     width: 60px;
     height: 60px;
     border-radius: 20px;
-    
 }
 
 .sidebar__lower-container {
