--- a/source/style/main.css
+++ b/source/style/main.css
@@ -8,6 +8,7 @@
     position: relative;
     max-width: 1298px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .menu {
@@ -61,6 +62,7 @@
     width: 1298px;
     height: 71px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     flex-grow: 1;
     background-color: rgb(255, 255, 255);
@@ -259,19 +261,27 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: scroll;
     width: 503px;
     height: 250px;
     background-color: rgb(255, 255, 255);
 }
 
+.horizontal__upper-container__heading {
+    margin: 5px 0 0 15px;
+}
+
 .horizontal__upper-container__inner {
+    margin-left: 15px;
     display: flex;
     justify-content: center;
+    justify-content: space-evenly;
+    border-bottom: 1px solid rgb(165, 156, 156);
 }
 
 .horizontal__upper-container__clock {
     width: 100px;
-    height: 30px;
+    height: 25px;
 }
 
 .horizontal__lower-container {
@@ -324,6 +334,7 @@
 }
 
 .sidebar__body {
+    overflow-y: scroll;
     background-color: rgb(255, 255, 255);
 }
 
@@ -389,7 +400,7 @@
     margin: 0 5px;
 }
 
-.sidebar__social-icons {
+.footer__social-icons {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -399,17 +410,17 @@
     background-color: rgb(245, 240, 240);
 }
 
-.sidebar__upper-icons {
+.footer__upper-icons {
     display: flex;
     justify-content: center;
 }
 
-.sidebar__lower-icons {
+.footer__lower-icons {
     display: flex;
     justify-content: center;
 }
 
-.sidebar__upper-container {
+.footer__upper-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -419,7 +430,7 @@
     border-radius: 20px;
 }
 
-.sidebar__lower-container {
+.footer__lower-container {
     display: flex;
     justify-content: center;
     align-items: center;
